--- a/main.html
+++ b/main.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modal Example</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<button id= "openModal">open Modal</button>
+    <!-- Button to open the modal -->
+    <button id="openModal">Open Modal</button>
 
-	<div class="modal" id="modal">
-		<div class="modal-content">
-		<div class="modal-header">
-		<h2>Modal-Header</h2>
-		<buttton class="close-modal" id="closeModal">&times;</buttton>
-		</div>
+    <!-- Modal container -->
+    <div class="modal" id="myModal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <!-- Modal header -->
+            <div class="modal-header">
+                <h2>Modal Header</h2>
+                <!-- Close button -->
+                <button class="close-modal">&times;</button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <p>Modal Body Content</p>
+            </div>
+        </div>
+    </div>
 
-		<div class="modal-body">
-			<p>Modal Body Content</p>
-		</div>
-		</div>
-	</div>
-		
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <!-- JavaScript to handle modal functionality -->
+    <script src="script.js"></script>
 </body>
 
 </html>
