--- a/main.html
+++ b/main.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal Example</title>
-    <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Button to open the modal -->
-    <button id="openModal">Open Modal</button>
+	<!-- the entire body must be written by student -->
+	<button id="openModal">openModal</button>
+	<div class = "modal display-modal" id="modal">
+		<div class="modal-content" id="modal-content">
+			<div class="modal-header">
+				<h2>Modal Header</h2>
+				<button class="close-modal" id="close-btn">X</button>
+			</div>
+			<div class="modal-body">
+				<p>Modal body content</p>
+			</div>
+		</div>
+	</div>
+    <script type="text/javascript" src="./script.js">
+</script>
 
-    <!-- Modal container -->
-    <div class="modal" id="myModal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <!-- Modal header -->
-            <div class="modal-header">
-                <h2>Modal Header</h2>
-                <!-- Close button -->
-                <button class="close-modal">&times;</button>
-            </div>
-            <!-- Modal body -->
-            <div class="modal-body">
-                <p>Modal Body Content</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- JavaScript to handle modal functionality -->
-    <script src="script.js"></script>
 </body>
 
 </html>
